--- a/appsettings.json
+++ b/appsettings.json
@@ -9,8 +9,8 @@
     "ApplicatonName": "Student Information System",
     "SmtpHost": "smtp.office365.com",
     "SmtpPort": "587",
-    "SmtpUser": "ervinjeremiah.mesa@student.uno-r.edu.ph",
-    "SmtpPass": "ejm112999"
+    "SmtpUser": "email",
+    "SmtpPass": "password"
   },
   "Kestrel": {
 
